fix categories route
